signup and login completed

--- a/Angular-Auth/src/app/app.component.html
+++ b/Angular-Auth/src/app/app.component.html
@@ -1,5 +1,5 @@
   <router-outlet></router-outlet>
-
+<app-loader></app-loader>
 <Angular-Bootstrap-Toasts-Container
   [Placement]="top-right"
   [Classes]="text-success">
