--- a/Angular-Auth/src/app/signup/signup.component.html
+++ b/Angular-Auth/src/app/signup/signup.component.html
@@ -3,34 +3,21 @@
         <div class="row d-flex">
             <div class="col-lg-6">
                 <div class="card1 pb-5">
-                    <div class="row"> <img src="https://i.imgur.com/CXQmsmF.png" class="logo"> </div>
-                    <div class="row px-3 justify-content-center mt-4 mb-5 border-line"> <img
-                            src="https://i.imgur.com/uNGdWHi.png" class="image"> </div>
+                    <div class="row"> 
+                        <img [src]="getLogo()" class="logo"> 
+                    </div>
+                    <div class="row px-3 justify-content-center mt-4 mb-5 border-line"> 
+                        <img [src]="getAddon()" class="image"> 
+                    </div>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="card2 card border-0 px-4 py-5">
-                    <div class="row mb-4 px-3">
-                        <h6 class="mb-0 mr-4 mt-2">Sign in with</h6>
+                    
+                    <app-social-login></app-social-login>
 
-                        <div class="facebook text-center mr-3" (click)="fbRedirect()">
-                            <div class="fa fa-facebook"></div>
-                        </div>
-                        <div class="twitter text-center mr-3" (click)="fbRedirect()">
-                            <div class="fa fa-twitter"></div>
-                        </div>
-                        <div class="linkedin text-center mr-3" (click)="fbRedirect()">
-                            <div class="fa fa-linkedin"></div>
-                        </div>
-                        <div class="twitter text-center mr-3" (click)="googleRedirect()">
-                            <div class="fa fa-google"></div>
-                        </div>
-                        <div class="linkedin text-center mr-3" (click)="fbRedirect()">
-                            <div class="fa fa-github"></div>
-                        </div>
-                    </div>
                     <div class="row px-3 mb-4">
-                        <div class="line"></div> <small class="or text-center">SignUp</small>
+                        <div class="line"></div> <small class="or text-center">Or</small>
                         <div class="line"></div>
                     </div>
 
