--- a/Angular-Auth/src/app/login/login.component.html
+++ b/Angular-Auth/src/app/login/login.component.html
@@ -3,33 +3,21 @@
         <div class="row d-flex">
             <div class="col-lg-6">
                 <div class="card1 pb-5">
-                    <div class="row"> <img src="https://i.imgur.com/CXQmsmF.png" class="logo"> </div>
-                    <div class="row px-3 justify-content-center mt-4 mb-5 border-line"> <img
-                            src="https://i.imgur.com/uNGdWHi.png" class="image"> </div>
+                    <div class="row"> 
+                        <img [src]="getLogo()" class="logo"> 
+                    </div>
+                    <div class="row px-3 justify-content-center mt-4 mb-5 border-line"> 
+                        <img [src]="getAddon()" class="image"> 
+                    </div>
                 </div>
             </div>
+            
             <!-- SOCIAL SIGN IN OPTIONS -->
             <div class="col-lg-6">
                 <div class="card2 card border-0 px-4 py-5">
-                    <div class="row mb-4 px-3">
-                        <h6 class="mb-0 mr-4 mt-2">Sign in with</h6>
-                        <div class="facebook text-center mr-3" (click)="fbRedirect()">
-                            <div class="fa fa-facebook"></div>
-                        </div>
-                        <div class="twitter text-center mr-3" (click)="fbRedirect()">
-                            <div class="fa fa-twitter"></div>
-                        </div>
-                        <div class="linkedin text-center mr-3" (click)="fbRedirect()">
-                            <div class="fa fa-linkedin"></div>
-                        </div>
-                        <div class="twitter text-center mr-3" (click)="googleRedirect()">
-                            <div class="fa fa-google"></div>
-                        </div>
-                        <div class="linkedin text-center mr-3" (click)="fbRedirect()">
-                            <div class="fa fa-github"></div>
-                        </div>
-                    </div>
-
+                    
+                    <app-social-login></app-social-login>
+                    
                     <div class="row px-3 mb-4">
                         <div class="line"></div> <small class="or text-center">Or</small>
                         <div class="line"></div>
@@ -79,7 +67,9 @@
                                         class="custom-control-input">
                                 <label for="chk1" class="custom-control-label text-sm">Remember me</label>
                             </div>
-                            <a class="ml-auto mb-0 text-sm" (click)="openForgotPassModal()">Forgot Password?</a>
+                            <a  class="ml-auto mb-0 text-sm"
+                                href="javascript:void(0)" 
+                                (click)="openForgotPassModal()">Forgot Password?</a>
                         </div>
 
                         <div class="row mb-3 px-3">
@@ -96,13 +86,15 @@
                         </small>
                         <small class="font-weight-bold ml-auto mb-0">
                             Not received verification mail?
-                            <a class="text-danger" (click)="openVerifyEmailModal()">Verify email</a>
+                            <a  class="text-danger" 
+                                href="javascript:void(0)"
+                                (click)="openVerifyEmailModal()">Verify email</a>
                         </small>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="bg-blue py-4">
+        <!-- <div class="bg-blue py-4">
             <div class="row px-3">
                 <small class="ml-4 ml-sm-5 mb-2">
                     Copyright &copy; 2019. All rights reserved.
@@ -114,7 +106,7 @@
                     <span class="fa fa-twitter mr-4 mr-sm-5 text-sm"></span>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
 <app-verify-link-modal 
