--- a/Angular-Auth/src/app/shared/verify-link-modal/verify-link-modal.component.html
+++ b/Angular-Auth/src/app/shared/verify-link-modal/verify-link-modal.component.html
@@ -8,80 +8,111 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form [formGroup]="verifyEmailForm" (ngSubmit)="onSubmit()">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input type="email" 
-                                        class="form-control" 
-                                        formControlName="email"
+                <div *ngIf="!isOtpVerified">
+                    <form [formGroup]="verifyEmailForm" (ngSubmit)="onSubmit()">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input type="email" class="form-control" formControlName="email"
                                         placeholder="Enter registered email id">
-                                <span class="text-danger"
-                                    *ngIf="verifyEmailFormControl.email.touched && verifyEmailFormControl.email.errors?.required">
-                                    Email is required
-                                </span>
-                                <span class="text-danger"
-                                    *ngIf="verifyEmailFormControl.email.touched && verifyEmailFormControl.email.errors?.email">
-                                    Enter a valid email address
-                                </span>
+                                    <span class="text-danger"
+                                        *ngIf="verifyEmailFormControl.email.touched && verifyEmailFormControl.email.errors?.required">
+                                        Email is required
+                                    </span>
+                                    <span class="text-danger"
+                                        *ngIf="verifyEmailFormControl.email.touched && verifyEmailFormControl.email.errors?.email">
+                                        Enter a valid email address
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="row mb-3 px-3" *ngIf="modalData.type=='verify'">
+                                    <button type="submit" [disabled]="!verifyEmailForm.valid || isLoading"
+                                        class="btn btn-primary text-center"> {{modalData.btn}}
+                                    </button>
+                                </div>
+                                <div class="row mb-3 px-3" *ngIf="modalData.type=='reset'">
+                                    <button type="submit" [disabled]="!verifyEmailForm.valid || isLoading"
+                                        class="btn btn-primary text-center"> {{modalData.btn}}
+                                    </button>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <div class="row mb-3 px-3" *ngIf="modalData.type=='verify'">
-                                <button type="submit" 
-                                        [disabled]="!verifyEmailForm.valid"
-                                        class="btn btn-primary text-center"> {{modalData.btn}}
-                                </button>
-                            </div>
-                            <div class="row mb-3 px-3" *ngIf="modalData.type=='reset'">
-                                <button type="submit" 
-                                        [disabled]="!verifyEmailForm.valid"
-                                        class="btn btn-primary text-center"> {{modalData.btn}}
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-                <form [formGroup]="otpForm" (ngSubmit)="onOTPSubmit()" *ngIf="displayForm && modalData.type=='reset'">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input type="number" 
-                                        class="form-control" 
-                                        formControlName="otpNo"
+                    </form>
+                    <form [formGroup]="otpForm" (ngSubmit)="onOTPSubmit()"
+                        *ngIf="displayForm && modalData.type=='reset'">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input type="number" class="form-control" formControlName="otpNo"
                                         placeholder="Enter six digit OTP">
-                                <span class="text-danger"
-                                    *ngIf="otpFormControl.otpNo.touched && otpFormControl.otpNo.errors?.required">
-                                    Enter OTP
-                                </span>
-                                <span class="text-danger"
-                                    *ngIf="otpFormControl.otpNo.touched && otpFormControl.otpNo.errors?.minlength">
-                                    OTP must be of six digits
-                                </span>
+                                    <span class="text-danger"
+                                        *ngIf="otpFormControl.otpNo.touched && otpFormControl.otpNo.errors?.required">
+                                        Enter OTP
+                                    </span>
+                                    <span class="text-danger"
+                                        *ngIf="otpFormControl.otpNo.touched && otpFormControl.otpNo.errors?.minlength">
+                                        OTP must be of six digits
+                                    </span>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="row mb-3 px-3" *ngIf="modalData.type=='reset'">
-                                <button type="submit" 
-                                        [disabled]="!otpForm.valid"
+                            <div class="col-md-6">
+                                <div class="row mb-3 px-3" *ngIf="modalData.type=='reset'">
+                                    <button type="submit" [disabled]="!otpForm.valid || isLoading"
                                         class="btn btn-primary text-center"> Submit OTP
-                                </button>
+                                    </button>
+                                </div>
                             </div>
                         </div>
+                    </form>
+                </div>
+
+                <form [formGroup]="resetPasswordForm" (ngSubmit)="resetPassword()" *ngIf="isOtpVerified">
+
+                    <div class="form-group">
+                        <input type="password" class="form-control" formControlName="password"
+                            placeholder="Enter new Password">
+                        <span class="text-danger"
+                            *ngIf="resetPasswordFormControl.password.touched && resetPasswordFormControl.password.errors?.required">
+                            Password is required
+                        </span>
+                        <span class="text-danger"
+                            *ngIf="resetPasswordFormControl.password.touched && resetPasswordFormControl.password.errors?.invalidPassword">
+                            Password should have minimum 8 characters, at least 1 uppercase letter, 1 lowercase letter
+                            and 1 number
+                        </span>
                     </div>
-                    <span class="text-danger" *ngIf="errorMsg">
-                        {{ errorMsg }}
-                    </span>
-                    <span class="text-success" *ngIf="successMsg">
-                        {{ successMsg }}
-                    </span>
+
+
+                    <div class="form-group">
+                        <input type="password" class="form-control" formControlName="confirmPassword"
+                            placeholder="Confirm Password">
+                        <span class="text-danger"
+                            *ngIf="resetPasswordFormControl.confirmPassword.touched && resetPasswordFormControl.confirmPassword.errors?.required">
+                            Confirm password is required
+                        </span>
+                        <span class="text-danger"
+                            *ngIf="resetPasswordFormControl.confirmPassword.touched && resetPasswordFormControl.confirmPassword.errors?.passwordMismatch">
+                            passwords does not match
+                        </span>
+                    </div>
+
+                    <div class="row mb-3 px-3">
+                        <button type="submit" [disabled]="!resetPasswordForm.valid || isLoading"
+                            class="btn btn-primary text-center"> Change Password
+                        </button>
+                    </div>
                 </form>
+                <span class="text-danger" *ngIf="errorMsg">
+                    {{ errorMsg }}
+                </span>
+                <span class="text-success" *ngIf="successMsg">
+                    {{ successMsg }}
+                </span>
             </div>
 
             <div class="modal-footer">
-                <button type="button" 
-                        class="btn btn-secondary btn-sm" 
-                        (click)="closeModal()">Close</button>
+                <button type="button" class="btn btn-secondary btn-sm" (click)="closeModal()">Close</button>
                 <!-- <button type="button" class="btn btn-primary" (click)="sendLink()">Get verification link </button> -->
             </div>
         </div>
