--- a/Angular-Auth/src/app/home/home/home.component.html
+++ b/Angular-Auth/src/app/home/home/home.component.html
@@ -1,6 +1,7 @@
-<div *ngIf="onParentLoaded">
+<!-- <div *ngIf="onParentLoaded">
+    <app-menu [user]="user"></app-menu>
+</div> -->
+<div>
     <app-menu [user]="user"></app-menu>
 </div>
-
 <router-outlet></router-outlet>
-<p>home works!</p>
