--- a/Angular-Auth/src/app/shared/menu/menu.component.css
+++ b/Angular-Auth/src/app/shared/menu/menu.component.css
@@ -2,5 +2,30 @@
     -webkit-box-shadow: 0 8px 6px -6px #999;
     -moz-box-shadow: 0 8px 6px -6px #999;
     box-shadow: 0 8px 6px -6px #999;
-    /* the rest of your styling */
+    background-color: white;
+}
+.nav-link {
+    font-weight:600;
+    border: none;
+}
+.nav-link.active{
+    border: none;
+    border-bottom:1px solid black;
+}
+.dropdown-menu {
+    right: 0;
+    left: auto;
+}
+.navbar-brand {
+   margin-right: 3rem; 
+   margin-left: 1rem;
+}
+
+.nav-item {
+    margin-right: 1rem;
+}
+.username {
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-right: 2px;
 }
