--- a/Angular-Auth/src/app/shared/menu/menu.component.html
+++ b/Angular-Auth/src/app/shared/menu/menu.component.html
@@ -1,45 +1,44 @@
-<!-- <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <div><a [routerLink]="['/home']" class="navbar-brand"> Auth App </a></div>
-        <ul class="navbar-nav">
-            <li><a [routerLink]="['/home']" class="nav-link">Home</a></li>
-            <li><a [routerLink]="['subjects']" class="nav-link">Subjects</a></li>
-        </ul>
+<nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand" href="#">
+        <img src="assets/images/addon.png" width="80" height="40" alt="">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <ul class="navbar-nav navbar-collapse justify-content-end">
-            <li><a *ngIf="!oauthService.isUserLoggedIn()" routerLink="/login" class="nav-link">login</a></li>
-            <li><a *ngIf="!oauthService.isUserLoggedIn()" routerLink="/signup" class="nav-link">Signup</a></li>
-            <li><a *ngIf="oauthService.isUserLoggedIn()" 
-                    [routerLink]="['profile']" 
-                    class="nav-link"> profile
-                </a>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a [routerLink]="['/home']" class="nav-link active">Home</a>
             </li>
-            <li><a *ngIf="oauthService.isUserLoggedIn()" routerLink="/logout" class="nav-link">logout</a></li>
+            <li class="nav-item">
+                <a [routerLink]="['subjects']" class="nav-link">Subjects</a>
+            </li>
         </ul>
-    </nav>
-</header> -->
-<!-- Nav menu with user information -->
-<header>
-    <nav class="navbar navbar-expand-xl navbar-light bg-light navbar-static-top">
-        <a class="navbar-brand" [routerLink]="['/home']">Navbar</a>
         <ul class="navbar-nav">
-            <li><a [routerLink]="['/home']" class="nav-link">Home</a></li>
-            <li><a [routerLink]="['subjects']" class="nav-link">Subjects</a></li>
-        </ul>
-        <div class="dropdown pmd-dropdown pmd-user-info ml-auto">
-            <a href="javascript:void(0);" class="btn-user dropdown-toggle media align-items-center"
-                data-toggle="dropdown" data-sidebar="true" aria-expanded="false">
-                <img class="mr-2 rounded-circle" *ngIf="user.imageUrl" [src]="user.imageUrl" width="40"
-                    height="40" alt="avatar">
-                <div class="media-body" *ngIf="!user.imageUrl">
-                    {{ user.name }}
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    <img class="mr-2 rounded-circle" *ngIf="user.imageUrl" [src]="user.imageUrl" width="30" height="30" alt="avatar">
+                    <span class="username" *ngIf="!user.imageUrl">{{user.name}}</span>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" [routerLink]="['profile']">Profile</a>
+                    <a class="dropdown-item" [routerLink]="['profile']">Settings</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" [routerLink]="['/logout']">Logout</a>
                 </div>
-                <i class="material-icons md-light ml-2 pmd-sm"></i>
-            </a>
-            <ul class="dropdown-menu dropdown-menu-right" role="menu">
-                <a class="dropdown-item" [routerLink]="['profile']">Profile</a>
-                <a class="dropdown-item" [routerLink]="['/logout']">Logout</a>
-            </ul>
-        </div>
-    </nav>
-</header>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+
+
+
+
+
+
+
+
